# Raytracer

./: CMakeLists.txt
include/: Camera.hh  Light.hh  Material.hh  Object.hh  Scene.hh  Tracer.hh  config.hh  utils.hh
include/Camera/: PerspectiveCamera.hh
include/Light/: AmbientLight.hh  PointLight.hh
include/Material/: BasicMaterial.hh  PhongMaterial.hh
include/Object/: Plane.hh  Sphere.hh  Torus.hh
include/Render/: RenderTarget.hh  SfmlRenderTarget.hh
include/Scene/: BasicScene.hh
include/Tracer/: BasicTracer.hh
include/Utils/: Color.hh  Hit.hh  Math.hh  Ray.hh  Vector2D.hh  Vector3D.hh
src/: Camera.cpp  Light.cpp  Material.cpp  Object.cpp  Scene.cpp  Tracer.cpp  main.cpp
src/Camera/: PerspectiveCamera.cpp
src/Light/: AmbientLight.cpp  PointLight.cpp
src/Material/: BasicMaterial.cpp  PhongMaterial.cpp
src/Object/: Plane.cpp  Sphere.cpp  Torus.cpp
src/Render/: RenderTarget.cpp  SfmlRenderTarget.cpp
src/Scene/: BasicScene.cpp
src/Tracer/: BasicTracer.cpp
src/Utils/: Color.cpp  Hit.cpp  Math.cpp  Ray.cpp  Vector2D.cpp  Vector3D.cpp
